fix services on mobile

--- a/_sass/layout/_home.scss
+++ b/_sass/layout/_home.scss
@@ -92,6 +92,7 @@
   }
   text-align: center;
   p {
+    position: relative;
     margin: 1rem;
     font-size: map-get($base, font-size);
   }
